# AutoSeg-Evaluator

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: DVH_VALIDATION_REPORT.md  PROJECT_OVERVIEW.md  STAPLE_VALIDATION_REPORT.md  VALIDATION_REPORT.md
scripts/: build_portable.py  build_synonyms.py  install-linux-desktop.sh  validate_against_upstream.py  validate_dvh_against_upstream.py  validate_staple_against_upstream.py
src/autoseg_evaluator/: __init__.py  __main__.py  app.py
src/autoseg_evaluator/core/: dose.py  dvh.py  likert.py  masks.py  matching.py  metrics.py  source_labels.py  staple.py  surface_distance.py
src/autoseg_evaluator/data/: metadata.py  results.py  session.py  synonyms.py
src/autoseg_evaluator/resources/: synonyms.json
src/autoseg_evaluator/ui/: main_window.py  theme.py
src/autoseg_evaluator/ui/dialogs/: replacement_rules.py  source_labels.py  template.py  visualization.py
src/autoseg_evaluator/ui/tabs/: build_consensus.py  compute.py  load_data.py  match_contours.py  qualitative.py  results.py
src/autoseg_evaluator/ui/widgets/: _palette.py  collapsible_box.py  dicom_tree.py  loaded_contours_tree.py  multiplanar_viewer.py  organ_drawer.py  progress_panel.py  signal_bar.py
src/autoseg_evaluator/utils/: paths.py  settings.py
src/autoseg_evaluator/workers/: metrics_worker.py  scan_worker.py
tests/: test_app_assets.py  test_compute_tab.py  test_consensus_tab.py  test_dose.py  test_dvh_equivalence.py  test_likert.py  test_match_logic.py  test_matching.py  test_metadata.py  test_metrics.py  test_metrics_equivalence.py  test_metrics_worker.py  test_multiplanar.py  test_platipy_equivalence.py  test_qualitative_tab.py  test_results.py  test_session.py  test_source_label_propagation.py  test_source_labels.py  test_staple.py  test_staple_equivalence.py  test_surface_distance.py  test_synthetic_consensus.py  test_tg263_synonyms.py  test_truncation.py  test_version.py  test_visualization.py  test_widgets.py
