[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoseg-evaluator"
version = "2.5.2"
description = "GUI tool for segmentation quality assessment in radiotherapy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Branimir Rusanov", email = "branimir.rusanov@research.uwa.edu.au" },
]
keywords = [
    "radiotherapy",
    "autocontouring",
    "dicom",
    "segmentation",
    "medical-imaging",
    "dvh",
    "quality-assurance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PySide6>=6.6",
    "qt-material>=2.14",
    "pydicom>=2.4",
    "SimpleITK>=2.3",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "matplotlib>=3.8",
    "dicompyler-core>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "pyinstaller>=6.5",
]

[project.scripts]
autoseg-evaluator = "autoseg_evaluator.__main__:main"

[project.urls]
Homepage = "https://github.com/branrusanov/autoseg-evaluator"
Documentation = "https://github.com/branrusanov/autoseg-evaluator/tree/main/docs"
Repository = "https://github.com/branrusanov/autoseg-evaluator"
"Bug Tracker" = "https://github.com/branrusanov/autoseg-evaluator/issues"
Citation = "https://zenodo.org/records/17383138"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoseg_evaluator = ["resources/**/*", "assets/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length — handled by formatter / case-by-case
    # Qt API forces camelCase for signals, slots, event overrides, and
    # PascalCase imports (e.g. ``from PySide6.QtCore import Qt as qt``).
    # The pep8-naming rules below fight a wall of Qt convention with no
    # safety benefit, so we silence them project-wide.
    "N802",  # invalid-function-name (mousePressEvent, paintSection, ...)
    "N803",  # invalid-argument-name
    "N813",  # camelcase-imported-as-lowercase
    "N815",  # mixed-case-variable-in-class-scope (Qt signals: foo = Signal())
    # Stylistic-only rules we don't enforce:
    "B905",   # zip-without-explicit-strict — strict=True can mask real data shape issues
    "SIM108", # if-else-block-instead-of-if-exp — sometimes the if/else reads clearer
    "SIM102", # collapsible-if — nested ifs often document intent
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
